--- a/Shop/templates/shop/index.html
+++ b/Shop/templates/shop/index.html
@@ -1,8 +1,27 @@
-{% for product in products_object %}
-
-<h2>{{ product.title }}</h2>
-
+{% extends 'shop/base.html' %}
+{% block content %}
 
 
+<div class="container">
+    <div class="row">
+        {% for product in products_object %}
+        <div class="col-md-3 mt-3">
+            <div class="card">
+                <img src="{{ product.image }}" class="card-img-top" width="100" height="200">
 
-{% endfor %}
+                <div class="card-body">
+                    <div class="card-title">
+                        {{ product.title }}
+                    </div>
+
+                    <div class="card-text">
+                        {{ product.price }}
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
+{% endblock %}
