--- a/Shop/templates/shop/base.html
+++ b/Shop/templates/shop/base.html
@@ -20,6 +20,45 @@
 
 <body>
 
+    <div class="container">
+
+        <div class="row w-100 justify-content-center">
+
+            <div class="col-md-12">
+
+                <div class="card card-sm">
+
+                    <div class="card-body row align-items-center">
+
+                        <form class="d-flex justify-content-center">
+
+                            <div class="col-auto text-center">
+
+                                <input type="search" placeholder="Search Product .." , name="item_name"
+                                    class="form-control form-control-borderless me-2  " style="width: 900px;">
+                            </div>
+
+                            <div class="col-auto ">
+
+                                <button class="btn btn-success" type="submit">Search</button>
+
+                            </div>
+
+                        </form>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+
+
+
+
     {% block content %}
     {% endblock %}
 
