--- a/Shop/templates/shop/index.html
+++ b/Shop/templates/shop/index.html
@@ -24,5 +24,42 @@
         </div>
         {% endfor %}
     </div>
+    <div class="row mt-3 ">
+        <div class="col-md-3 offset-md-5">
+
+            <ul class="pagination">
+                {% if products_object.has_previous %}
+                <li class="page-item">
+                    <a class="page-link" href="?page=1">First</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ products_object.previous_page_number }}">Previous</a>
+                </li>
+                {% endif %}
+
+                <li class="page-item active">
+                    <a class="page-link" href="?page={{ products_object.number }}">{{ products_object.number }}</a>
+                </li>
+
+                {% if products_object.has_next %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ products_object.next_page_number }}">Next</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ products_object.paginator.num_pages }}">Last</a>
+                </li>
+                {% endif %}
+            </ul>
+
+
+        </div>
+
+
+    </div>
+
+
+
+
+
 </div>
 {% endblock %}
