--- a/Shop/templates/shop/detail.html
+++ b/Shop/templates/shop/detail.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% load static %}
 
-<div class="container">
+<div class="container mt-5">
 
     <div class="row">
 
@@ -18,47 +18,48 @@
 
             </div>
 
-            <div class="col-md-6">
+        </div>
 
-                <div class="row">
+        <div class="col-md-6">
 
-                    <div class="col-md-12">
+            <div class="row">
 
-                        <h3>{{ product_object.title }}</h3>
+                <div class="col-md-12">
 
-                    </div>
-
-                </div>
-
-                <div class="row">
-
-                    <div class="col-md-12">
-
-                        <p>{{ product_object.description }}</p>
-
-                    </div>
+                    <h3>{{ product_object.title }}</h3>
 
                 </div>
 
-                <div class="row">
+            </div>
 
-                    <div class="col-md-12">
+            <div class="row">
 
-                        <p>Price: $ {{ product_object.price }}</p>
+                <div class="col-md-12">
 
-                    </div>
+                    <p>{{ product_object.description }}</p>
+
+                </div>
+
+            </div>
+
+            <div class="row">
+
+                <div class="col-md-12">
+
+                    <p>Price: $ {{ product_object.price }}</p>
 
                 </div>
 
-                <div class="row">
+            </div>
 
-                    <div class="col-md-12">
+            <div class="row">
 
-                        <p>Price: $ {{ product_object.discount_price }}</p>
+                <div class="col-md-12">
 
-                    </div>
+                    <p>Discount Price: $ {{ product_object.discount_price }}</p>
 
                 </div>
+
 
 
             </div>
