--- a/Shop/templates/shop/index.html
+++ b/Shop/templates/shop/index.html
@@ -19,6 +19,11 @@
                         $ {{ product.price }}
                     </div>
 
+                    <div class="card-text">
+                        <a href="/{{ product.id }}" class="btn btn-warning">View</a>
+                        <a href="" class="btn btn-warning">Add to Cart</a>
+                    </div>
+
                 </div>
             </div>
         </div>
