--- a/Shop/templates/shop/index.html
+++ b/Shop/templates/shop/index.html
@@ -62,9 +62,16 @@
 
     </div>
 
-
-
-
-
 </div>
+
+<script type="text/javascript">
+
+    if (localStorage.getItem('cart') == null) {
+        var cart = {};
+    }
+
+</script>
+
+
+
 {% endblock %}
