--- a/Shop/templates/shop/index.html
+++ b/Shop/templates/shop/index.html
@@ -79,6 +79,17 @@
 
         var item_id = this.id.toString();
         console.log(item_id);
+
+        if (cart[item_id] != undefined) {
+            cart[item_id] = cart[item_id] + 1;
+        }
+        else {
+            cart[item_id] = 1;
+        }
+
+        console.log(cart);
+        localStorage.setItem('cart', JSON.stringify(cart));
+
     });
 
 
