--- a/Shop/templates/shop/index.html
+++ b/Shop/templates/shop/index.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 
-<div class="container ">
+<div class="container mt-5">
     <div class="row">
         {% for product in products_object %}
         <div class="col-md-3 mt-3">
@@ -89,6 +89,8 @@
 
         console.log(cart);
         localStorage.setItem('cart', JSON.stringify(cart));
+
+        console.log(Object.keys(cart).length);
 
     });
 
