Displaying Number Of Items On Navbar

--- a/Shop/templates/shop/base.html
+++ b/Shop/templates/shop/base.html
@@ -60,15 +60,15 @@
                                 </li>
 
                                 <li class="nav-item mx-2">
-                                    <a class="nav-link" href="#">Cart</a>
+                                    <a id="cart" class="nav-link" href="#">Cart (0)</a>
                                 </li>
 
                                 <li class="nav-item mx-2">
-                                    <a class="btn btn-outline-dark me-2" href="#">Log in</a>
+                                    <a class="btn btn-warning me-2" href="#">Log in</a>
                                 </li>
 
                                 <li class="nav-item mx-2">
-                                    <a class="btn btn-signup" href="#">Sign up</a>
+                                    <a class="btn btn-warning" href="#">Sign Up</a>
                                 </li>
 
                             </ul>
