--- a/Shop/templates/shop/index.html
+++ b/Shop/templates/shop/index.html
@@ -90,7 +90,8 @@
         console.log(cart);
         localStorage.setItem('cart', JSON.stringify(cart));
 
-        console.log(Object.keys(cart).length);
+        document.getElementById('cart').innerHTML = "Cart (" + Object.keys(cart).length + ")";
+
 
     });
 
