--- a/Shop/templates/shop/base.html
+++ b/Shop/templates/shop/base.html
@@ -49,7 +49,7 @@
                                 <input name="item_name" class="form-control me-2 search-bar" type="search"
                                     placeholder="Search for anything">
 
-                                <button class="btn btn-success" type="submit">Search</button>
+                                <button class="btn btn-warning" type="submit">Search</button>
 
                             </form>
 
@@ -60,14 +60,17 @@
                                 </li>
 
                                 <li class="nav-item mx-2">
-                                    <a id="cart" class="nav-link" href="#">Cart (0)</a>
+                                    <button id="cart" type="button" class="btn btn-warning" data-bs-container="body"
+                                        data-bs-toggle="popover" data-bs-placement="bottom"
+                                        data-bs-content="No items in cart"> Cart (0)</button>
+
                                 </li>
 
-                                <li class="nav-item mx-2">
+                                <li class="nav-item ">
                                     <a class="btn btn-warning me-2" href="#">Log in</a>
                                 </li>
 
-                                <li class="nav-item mx-2">
+                                <li class="nav-item">
                                     <a class="btn btn-warning" href="#">Sign Up</a>
                                 </li>
 
