Adding Cart Items In PopOver

--- a/Shop/templates/shop/base.html
+++ b/Shop/templates/shop/base.html
@@ -60,9 +60,9 @@
                                 </li>
 
                                 <li class="nav-item mx-2">
-                                    <button id="cart" type="button" class="btn btn-warning" data-bs-container="body"
-                                        data-bs-toggle="popover" data-bs-placement="bottom"
-                                        data-bs-content="No items in cart"> Cart (0)</button>
+                                    <button id="cart" data-bs-html="true" type="button" class="btn btn-warning"
+                                        data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom"
+                                        data-bs-content="This Is Your Cart"> Cart (0)</button>
 
                                 </li>
 
