--- a/Shop/templates/shop/index.html
+++ b/Shop/templates/shop/index.html
@@ -11,7 +11,7 @@
                 <img src="{{ product.image }}" class="card-img-top" width="100" height="200">
 
                 <div class="card-body">
-                    <div class="card-title">
+                    <div id="nm{{ product.id }}" class="card-title">
                         {{ product.title }}
                     </div>
 
@@ -93,10 +93,23 @@
         document.getElementById('cart').innerHTML = "Cart (" + Object.keys(cart).length + ")";
 
 
-
-
-
     });
+
+
+    DisplayCart(cart);
+    function DisplayCart(cart) {
+        var cartString = "<h5>Cart</h5><div class='mx-2'>";
+        var cartindex = 1;
+
+        for (var item in cart) {
+            cartString += "<b>" + cartindex + "</b>. ";
+            cartString += document.getElementById('nm' + item).innerHTML;
+            cartString += "<b>" + " Qty: " + cart[item] + "<br>" + "</b>";
+            cartindex += 1;
+        }
+
+        document.getElementById('cart').setAttribute('data-bs-content', cartString + "</div>");
+    }
 
     const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
     const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl))
