Adding And Styling Checkout Page And Create Views And URLs

--- a/Shop/templates/shop/index.html
+++ b/Shop/templates/shop/index.html
@@ -108,6 +108,7 @@
             cartindex += 1;
         }
 
+        cartString += "<a href='/checkout' class='btn btn-primary mt-2' id = 'checkout'>Checkout</a>";
         document.getElementById('cart').setAttribute('data-bs-content', cartString + "</div>");
     }
 
