--- a/Shop/templates/shop/index.html
+++ b/Shop/templates/shop/index.html
@@ -11,9 +11,7 @@
                 <img src="{{ product.image }}" class="card-img-top" width="100" height="200">
 
                 <div class="card-body">
-                    <div id="nm{{ product.id }}" class="card-title">
-                        {{ product.title }}
-                    </div>
+                    <div id="nm{{ product.id }}" class="card-title">{{ product.title }}</div>
 
                     <div class="card-text">
                         $ {{ product.price }}
@@ -81,10 +79,17 @@
         console.log(item_id);
 
         if (cart[item_id] != undefined) {
-            cart[item_id] = cart[item_id] + 1;
+
+            quantity = cart[item_id][0] + 1;
+            cart[item_id][0] = quantity;
+
         }
         else {
-            cart[item_id] = 1;
+            quantity = 1;
+            name = document.getElementById('nm' + item_id).innerHTML;
+            cart[item_id] = [quantity, name];
+
+
         }
 
         console.log(cart);
@@ -104,7 +109,7 @@
         for (var item in cart) {
             cartString += "<b>" + cartindex + "</b>. ";
             cartString += document.getElementById('nm' + item).innerHTML;
-            cartString += "<b>" + " Qty: " + cart[item] + "<br>" + "</b>";
+            cartString += "<b>" + " Qty: " + cart[item][0] + "<br>" + "</b>";
             cartindex += 1;
         }
 
