--- a/Shop/templates/shop/checkout.html
+++ b/Shop/templates/shop/checkout.html
@@ -12,19 +12,9 @@
 
         <div class="row">
 
-            <ul class="list-group">
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Cras justo odio
-                    <span class="badge bg-primary rounded-pill">14</span>
-                </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Dapibus ac facilisis in
-                    <span class="badge bg-primary rounded-pill">2</span>
-                </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Morbi leo risus
-                    <span class="badge bg-primary rounded-pill">1</span>
-                </li>
+            <ul class="list-group" id="List-of-cart-items">
+
+
             </ul>
 
 
@@ -32,25 +22,31 @@
 
     </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </div>
+
+<script type="text/javascript">
+
+    if (localStorage.getItem('cart') == null) {
+
+        var cart = {};
+    }
+    else {
+        cart = JSON.parse(localStorage.getItem('cart'));
+    }
+
+    for (item in cart) {
+
+        let name = cart[item][1];
+        let quantity = cart[item][0];
+
+        itemString = `<li class="list-group-item d-flex justify-content-between align-items-center">
+                    ${name}
+                    <span class="badge bg-primary rounded-pill">${quantity}</span>
+                </li>`
+        $('#List-of-cart-items').append(itemString);
+    }
+
+
+</script>
 
 {% endblock %}
