--- a/Shop/templates/shop/checkout.html
+++ b/Shop/templates/shop/checkout.html
@@ -8,9 +8,11 @@
 
     <h1 class="mb-4">Checkout</h1>
 
-    <div class="col-md-12">
+    <div class="row">
 
-        <div class="row">
+        <div class="col-md-12">
+
+
 
             <ul class="list-group" id="List-of-cart-items">
 
@@ -20,6 +22,61 @@
 
         </div>
 
+    </div>
+
+    <div class="container mt-5">
+
+        <div class="row justify-content-center">
+
+            <div class="col-md-8">
+
+                <div class="card p-4 shadow">
+
+                    <form method="post">
+
+                        {% csrf_token %}
+
+                        <div class="mb-3">
+                            <label class="form-label">Full Name</label>
+                            <input id="name" name="name" type="text" class="form-control" placeholder="John Doe"
+                                required>
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label">Email</label>
+                            <input id="email" name="email" type="email" class="form-control"
+                                placeholder="example@example.com" required>
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label">Address</label>
+                            <input id="address" name="address" type="text" class="form-control"
+                                placeholder="No 222, Main St" required>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                <label class="form-label">City</label>
+                                <input id="city" name="city" type="text" class="form-control" required>
+                            </div>
+
+                            <div class="col-md-4 mb-3">
+                                <label class="form-label ">State</label>
+                                <input id="state" name="state" type="text" class="form-control" required>
+                            </div>
+
+                            <div class="col-md-2 mb-3">
+                                <label class="form-label">Zip</label>
+                                <input id="zip" name="zip" type="text" class="form-control" required>
+                            </div>
+                        </div>
+
+                        <button type="submit" class="btn btn-warning w-100">Place Order</button>
+                    </form>
+
+                </div>
+            </div>
+        </div>
     </div>
 
 </div>
