Adding Item Price Using JS To Local Storage

--- a/Shop/templates/shop/index.html
+++ b/Shop/templates/shop/index.html
@@ -13,9 +13,7 @@
                 <div class="card-body">
                     <div id="nm{{ product.id }}" class="card-title">{{ product.title }}</div>
 
-                    <div class="card-text">
-                        $ {{ product.price }}
-                    </div>
+                    <div id="price{{ product.id }}" class="card-text">{{ product.price }}</div>
 
                     <div class="card-text">
                         <a href="/{{ product.id }}" class="btn btn-warning">View</a>
@@ -82,12 +80,15 @@
 
             quantity = cart[item_id][0] + 1;
             cart[item_id][0] = quantity;
+            cart[item_id][2] = cart[item_id][2] + parseFloat(document.getElementById('price' + item_id).innerHTML);
 
         }
         else {
             quantity = 1;
+            price = parseFloat(document.getElementById('price' + item_id).innerHTML);
             name = document.getElementById('nm' + item_id).innerHTML;
-            cart[item_id] = [quantity, name];
+            cart[item_id] = [quantity, name, price];
+
 
 
         }
