--- a/Shop/templates/shop/base.html
+++ b/Shop/templates/shop/base.html
@@ -33,7 +33,7 @@
 
                     <div class="container-fluid px-3">
 
-                        <a class="navbar-brand" href="#">
+                        <a class="navbar-brand" href="{% url 'index' %}">
                             <img src="" alt="Avix Tecno Shop">
                         </a>
 
