--- a/Shop/templates/shop/checkout.html
+++ b/Shop/templates/shop/checkout.html
@@ -71,6 +71,14 @@
                                 <label class="form-label">Zip</label>
                                 <input id="zip" name="zip" type="text" class="form-control" required>
                             </div>
+
+                            <br>
+
+                            <div class="col-md-4 mb-3">
+                                <label class="form-label">Your Total Amount:</label>
+                                <input readonly="" id="total" name="total" type="text" class="form-control" required>
+                            </div>
+
                         </div>
 
                         <button type="submit" class="btn btn-warning w-100">Place Order</button>
@@ -93,17 +101,30 @@
         cart = JSON.parse(localStorage.getItem('cart'));
     }
 
+    let total = 0;
+
     for (item in cart) {
 
         let name = cart[item][1];
         let quantity = cart[item][0];
+        let price = cart[item][2];
+        total = total + cart[item][2];
 
         itemString = `<li class="list-group-item d-flex justify-content-between align-items-center">
-                    ${name}
-                    <span class="badge bg-primary rounded-pill">${quantity}</span>
+                    Qty: ${quantity} Of ${name}
+                    <span class="badge bg-warning rounded-pill">${price}</span>
                 </li>`
         $('#List-of-cart-items').append(itemString);
     }
+
+    totalprice = `<li class="list-group-item d-flex justify-content-between align-items-center">
+                    <b>Total($)</b>
+                    <span class="badge bg-primary rounded-pill">${total.toFixed(2)}</span>
+                </li>`
+
+    $('#total').val(total.toFixed(2));
+
+    $('#List-of-cart-items').append(totalprice);
 
     $('#items').val(JSON.stringify(cart));
 
