--- a/Shop/templates/shop/checkout.html
+++ b/Shop/templates/shop/checkout.html
@@ -112,7 +112,7 @@
 
         itemString = `<li class="list-group-item d-flex justify-content-between align-items-center">
                     Qty: ${quantity} Of ${name}
-                    <span class="badge bg-warning rounded-pill">${price}</span>
+                    <span class="badge bg-warning rounded-pill">${price.toFixed(2)}</span>
                 </li>`
         $('#List-of-cart-items').append(itemString);
     }
