Adding Register Form And Registration Success Message

--- a/Shop/templates/shop/base.html
+++ b/Shop/templates/shop/base.html
@@ -87,6 +87,15 @@
         </div>
 
     </div>
+    {% if messages %}
+    {% for message in messages %}
+
+    {{ message }}
+
+    {% endfor %}
+    {% endif %}
+
+
 
     {% block content %}
     {% endblock %}
